--- a/public/css/style.css
+++ b/public/css/style.css
@@ -62,6 +62,10 @@ table.timeslots {
     color: #222222;
 }
 
+.tabButton_container {
+    margin: 20px;
+}
+
 .tabButton:hover {
     border-color: black;
 }
