--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no">
 		<link rel="stylesheet" href="/css/style.css" type="text/css" />
+		<link rel="stylesheet" href="/css/atom.css" type="text/css" />
 		<title>Scheduling App</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
 	</head>
