--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,3 +114,17 @@ a.room_link {
     border-color: black;
 }
 
+@media (max-aspect-ratio: 1/1) {
+    .tabButton {
+        margin: 0;
+        display: table-cell;
+    }
+    .tabButton_row {
+        display: table;
+        table-layout: fixed;
+        width: 100%;
+    }
+    nav.header {
+        margin-top: 0;
+    }
+}
