--- a/views/scheduler.hbs
+++ b/views/scheduler.hbs
@@ -23,8 +23,8 @@
     </div>
 </nav>
 <div class="tabButton_container">
-    <div id="days"></div>
-    <div id="rooms"></div>
+    <div class="tabButton_row" id="days"></div>
+    <div class="tabButton_row" id="rooms"></div>
 </div>
 <h1 class="pageTitle">{{title}}</h1>
 <div id="tables" style="width: Calc(100vw - 30px); max-width: {{max_table_width}}"></div>
