--- a/views/scheduler.hbs
+++ b/views/scheduler.hbs
@@ -22,9 +22,9 @@
         <a href="/meeting" class="room_link">Meeting Rooms</a>
     </div>
 </nav>
-<div class="tabButton_container">
+<div class="tabButton_row_container">
     <div class="tabButton_row" id="days"></div>
-    <div class="tabButton_row" id="rooms"></div>
+    <div  class="tabButton_row" id="rooms"></div>
 </div>
 <h1 class="pageTitle">{{title}}</h1>
 <div id="tables" style="width: Calc(100vw - 30px); max-width: {{max_table_width}}"></div>
