--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,9 +48,14 @@ table.timeslots {
     margin: 20px;
 }
 
+.tabButton_row {
+    align-content: center;
+}
+
 .tabButton_container {
     display: inline-block;
     text-align: center;
+    padding: 0;
 }
 
 .tabButton {
@@ -119,17 +124,14 @@ a.room_link {
     border-color: black;
 }
 
-@media (max-aspect-ratio: 1/1) {
-    .tabButton {
-        margin-left: 0;
-        margin-top: 0;
-        padding: 8px;
-    }
-    .tabButton_row {
-        width: 100%;
+@media (max-width: 760px) {
+    table.timeslots {
+        font-size: 3vw;
         display: flex;
-        flex-wrap: nowrap;
-        justify-content: space-evenly;
+    }
+    .tabButton {
+        margin: 5px;
+        padding: 8px;
     }
     nav.header {
         margin-top: 0;
