--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,16 +15,21 @@ textarea {
     resize: none;
 }
 
+div.roomTables {
+    width: 100%;
+    display: block;
+}
+
 table.timeslots {
     font-family: sans-serif;
     font-size: 14px;
-    width: 98.5%;
     border-collapse: collapse;
     margin: 10px;
     vertical-align: top;
     font-weight: 100;
     padding: 0 10px;
     box-sizing: border-box;
+    width: Calc(100vw - 30px);
 }
 
 .columnTitle {
@@ -124,20 +129,32 @@ a.room_link {
     border-color: black;
 }
 
+
 @media (max-width: 760px) {
     table.timeslots {
-        font-size: 3vw;
-        display: flex;
+        display: block;
+        position: absolute;
+        margin-left: 0;
+        width: 100%;
+    }
+    tr, td {
+        padding: 8px;
+    }
+    .pageTitle {
+        font-size: 7vw;
+        text-align: center;
+    }
+}
+
+@media (max-width: 549px) {
+    nav.header {
+        margin-top: 0;
     }
     .tabButton {
         margin: 5px;
         padding: 8px;
     }
-    nav.header {
-        margin-top: 0;
-    }
-    .pageTitle {
-        font-size: 7vw;
-        text-align: center;
+    .reserveButton, table.timeslots {
+        font-size: 2.8vw;
     }
 }
