--- a/public/css/inputBox.css
+++ b/public/css/inputBox.css
@@ -5,7 +5,6 @@
     top: 50%;
     transform: translate(-50%, -50%);
     border: 1px solid black;
-    padding: 10px 20px;
     line-height: 20pt;
     background-color: white;
     user-select: none;
@@ -16,11 +15,17 @@
 .modalBox input {
     width: 100%;
     user-select: normal;
+    border-style: groove;
 }
 
 .modalBox button {
     display: inline-block;
     margin: 0 20px;
+}
+
+.modalBox form {
+    padding: 20px;
+    box-sizing: content-box;
 }
 
 .modalBox_buttonContainer {
@@ -39,10 +44,6 @@
     padding: 10px 20px;
     background-color: black;
     color: white;
-    margin-bottom: 10px;
-    margin-left: -20px;
-    margin-right: -20px;
-    margin-top: -10px;
 }
 
 .numberInputLine {
@@ -104,13 +105,16 @@
         height: 100vh;
         font-size: 5vw;
         line-height: 7vw;
+        box-sizing: content-box;
+        margin: 0;
     }
     .modalBoxTitle {
         font-size: 8vw;
+        margin: 0;
     }
     .modalBox input {
         font-size: 5vw;
-        border-bottom: 1px solid black
+        border-bottom: 1px solid black;
     }
     .modalBox button {
         font-size: 5vw;
