send email to admin with scheduling details

--- a/views/scheduler.hbs
+++ b/views/scheduler.hbs
@@ -273,6 +273,7 @@
             {{text}} <br> <input type="text" name="{{name}}" {{#if required}}required{{/if}} <br>
         {{/each}}
         email: <br> <input type="email" name="email" required><br>
+        devcon ticket #: <br> <input type="text" name="ticket" required><br>
         <div class="numberInputLine">
             start: 
             <span class="numberInput">
