--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, user-scalable=no">
 		<link rel="stylesheet" href="/css/style.css" type="text/css" />
 		<link rel="stylesheet" href="/css/atom.css" type="text/css" />
+		<link rel="shortcut icon" type="image/png" href="/images/ef.png"/>
 		<title>Scheduling App</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
 	</head>
