allow zooming on mobile for users with bad vision

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, user-scalable=no">
+        <meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" href="/css/style.css" type="text/css" />
 		<link rel="stylesheet" href="/css/atom.css" type="text/css" />
 		<link rel="shortcut icon" type="image/png" href="/images/ef.png"/>
