--- a/public/css/style.css
+++ b/public/css/style.css
@@ -128,6 +128,8 @@ a.room_link {
     margin-left: 30px;
 }
 
+button:focus {outline:0;}
+
 .bold {
     font-weight: 900;
     border-color: black;
